# NdkImageDemo

./: settings.gradle
gradle/wrapper/: gradle-wrapper.properties
ndkimagedemo/: CMakeLists.txt  build.gradle
ndkimagedemo/src/androidTest/java/com/me/ndkimage/demo/: ExampleInstrumentedTest.kt
ndkimagedemo/src/main/: AndroidManifest.xml
ndkimagedemo/src/main/java/com/me/ndkimage/demo/: CommonUtils.kt  ImageReaderBridge.java  MainActivity.kt  MySurfaceView.kt
ndkimagedemo/src/main/java/com/me/ndkimage/demo/camera/: BaseCameraProvider.kt  Camera2Provider.kt
ndkimagedemo/src/main/java/com/me/ndkimage/demo/util/: BitmapUtil.kt  PermissionUtil.kt
ndkimagedemo/src/main/jni/: jni_helper.cpp  jni_helper.h  native_image_lib.cpp
ndkimagedemo/src/main/res/drawable/: circle.xml
ndkimagedemo/src/main/res/layout/: activity_main.xml
ndkimagedemo/src/main/res/values/: strings.xml  themes.xml
ndkimagedemo/src/main/res/values-night/: themes.xml
ndkimagedemo/src/test/java/com/me/ndkimage/demo/: ExampleUnitTest.kt
